--- a/src/Pipeline/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Pipeline/FrontendBundle/Resources/views/Home/index.html.twig
@@ -1,6 +1,8 @@
 {% extends "::layout.html.twig" %}
 {% block body %}
-
-Hello!
-
+<div class="container">
+    <div class="columns sixteen">
+        We call this rapid prototyping
+    </div>
+</div>
 {% endblock %}
