Updates to views

--- a/src/Pipeline/FrontendBundle/Resources/views/Layout/header.html.twig
+++ b/src/Pipeline/FrontendBundle/Resources/views/Layout/header.html.twig
@@ -1,3 +1,5 @@
-<header>
-    #Pipeline
+<header class="container">
+    <div class="columns sixteen row">
+        #pipeline
+    </div>
 </header>
