Frontend header updates

--- a/src/Pipeline/FrontendBundle/Resources/views/Layout/header.html.twig
+++ b/src/Pipeline/FrontendBundle/Resources/views/Layout/header.html.twig
@@ -1,5 +1,19 @@
-<header class="container">
-    <div class="columns sixteen row">
-        #pipeline
-    </div>
-</header>
+<div class="header">
+    <header class="container">
+        <div class="columns four logo-edge">
+            <div class="logo">
+                #pipeline 
+            </div>
+        </div>
+        <div class="columns twelve navigation-edge">
+            <ul>
+                <il>
+                    @{{ app.user.username }}
+                </il>
+                <li>
+                    Home
+                </li>
+            </ul>
+        </div>
+    </header>
+</div>
