--- a/app/Resources/public/styles/layout.less
+++ b/app/Resources/public/styles/layout.less
@@ -19,10 +19,44 @@
 ================================================== */
 @primary-background-color: #eee;
 
+@overlay-background-color: #fff;
+@sharpborder: #ddd;
+
 /* #Site Styles
 ================================================== */
 body { 
     background-color: @primary-background-color;
+}
+
+.header { 
+    background-color: @overlay-background-color;
+    border-bottom: 1px solid @sharpborder;
+    height: 40px;
+    
+    header { 
+        
+        .logo-edge { 
+            font-size: 20px;
+            .logo { 
+                padding: 10px;
+            }
+        }
+        
+        .navigation-edge { 
+            font-size: 12px;
+            text-align: right;
+            
+            ul { 
+                list-style: none;
+                
+                li { 
+                    display: inline-block;
+                    padding: 12px;
+                }
+            }   
+        }
+        
+    }
 }
 
 
