Yay RequireJS, appropriate config and jQuery and Spine! Frontend base is almost complete!

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -6,6 +6,7 @@
         {% stylesheets '../app/Resources/public/styles/*' %}
             <link rel="stylesheet" href="{{ asset_url }}" />
         {% endstylesheets %}
+        {{ require_js_initialize({ 'main' : 'main' }) }}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
