--- a/src/Pipeline/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Pipeline/FrontendBundle/Resources/views/Home/index.html.twig
@@ -1,7 +1,11 @@
 {% extends "::layout.html.twig" %}
 {% block body %}
 <div class="container">
-    <div class="columns sixteen">
+    <div id="sidebar" class="columns four">
+    	Sidebar
+    </div>
+    
+    <div id="content" class="columns twelve">
         We call this rapid prototyping
     </div>
 </div>
