Further Pipeline javascript application structuring

--- a/src/Pipeline/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Pipeline/FrontendBundle/Resources/views/Home/index.html.twig
@@ -2,11 +2,11 @@
 {% block body %}
 <div class="container">
     <div id="sidebar" class="columns four">
-    	Sidebar
+    
     </div>
     
     <div id="content" class="columns twelve">
-        We call this rapid prototyping
+        <!-- We call this rapid prototyping -->
     </div>
 </div>
 {% endblock %}
