--- a/app/Resources/public/styles/layout.less
+++ b/app/Resources/public/styles/layout.less
@@ -31,7 +31,7 @@ body {
 .header { 
     background-color: @overlay-background-color;
     border-bottom: 1px solid @sharpborder;
-    height: 40px;
+    min-height: 40px;
     
     header { 
         
@@ -48,10 +48,13 @@ body {
             
             ul { 
                 list-style: none;
+                margin: 0px;
+				padding: 0px;
                 
                 li { 
                     display: inline-block;
                     padding: 12px;
+                    margin: 0px;
                 }
             }   
         }
@@ -59,9 +62,50 @@ body {
     }
 }
 
-
 /* #Page Styles
 ================================================== */
+.body { 
+	margin-top: 15px !important;
+}
+
+#sidebar { 
+	.side-menu { 
+		background-color: #f7f7f7;
+		border: 1px solid @sharpborder;
+		border-radius: 3px;
+		padding: 0px;
+		
+		li.selected { 
+			background-color: #fff;
+		}
+		
+		li { 
+			font-size: 14px;
+			padding: 0px;
+			margin-bottom: 0px;
+			border-bottom: 1px solid #EBEBEB;
+			
+			a:link, a:active, a:visited { 
+				text-decoration: none;
+				display: block;
+				width: 100%;
+				height: 100%;
+				padding: 10px;
+				
+				&:hover {
+				}
+			}
+			
+			&:hover { 
+				background-color: #fff;
+			}
+			
+			&:last-child { 
+				border-bottom: 0px;
+			}
+		}
+	}
+}
 
 /* #Media Queries
 ================================================== */
