--- a/src/Pipeline/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Pipeline/FrontendBundle/Resources/views/Home/index.html.twig
@@ -1,8 +1,13 @@
 {% extends "::layout.html.twig" %}
 {% block body %}
-<div class="container">
+<div class="container body">
     <div id="sidebar" class="columns four">
-    
+    	<ul class="side-menu">
+    		<li class="selected"><a href="#">All Tasks</a></li>
+    		<li><a href="#">Today's Pipeline</a></li>
+    		<li><a href="#">Dashboard</a></li>
+    		<li><a href="#">'splode</a></li>
+    	</ul>
     </div>
     
     <div id="content" class="columns twelve">
