--- a/src/Pipeline/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Pipeline/FrontendBundle/Resources/views/Home/index.html.twig
@@ -6,12 +6,15 @@
     		<li class="selected"><a href="#">All Tasks</a></li>
     		<li><a href="#">Today's Pipeline</a></li>
     		<li><a href="#">Dashboard</a></li>
-    		<li><a href="#">'splode</a></li>
+    		<li id="show_all_button" style="display:none"><a href="#">&bull;&bull;&bull;</a></li>
     	</ul>
     </div>
     
     <div id="content" class="columns twelve">
-        <!-- We call this rapid prototyping -->
+		<div id="tasks_template">
+			<h2>All Tasks</h2>
+		</div>
+
     </div>
 </div>
 {% endblock %}
