Updated for inline templating.

--- a/app/Resources/public/styles/layout.less
+++ b/app/Resources/public/styles/layout.less
@@ -119,6 +119,19 @@ body {
 	}
 }
 
+.task-list { 
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	margin: 0px;
+	padding: 0px;
+
+	.task-item { 
+		background-color: #fff;
+		margin: 0px;
+		padding: 10px;
+	}
+}
+
 /* #Media Queries
 ================================================== */
 
