--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Pipeline{% endblock %}</title>
         {% stylesheets '../app/Resources/public/styles/*' %}
             <link rel="stylesheet" href="{{ asset_url }}" />
         {% endstylesheets %}
@@ -30,6 +30,9 @@
             {% include "FrontendBundle:Layout:header.html.twig" %}
         {% endif %}
         {% block body %}{% endblock %}
+        
+        {% block handlebars %}{% endblock %}
+        
         {% block javascripts %}{% endblock %}
     </body>
 </html>
