--- a/src/Pipeline/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Pipeline/FrontendBundle/Resources/views/Home/index.html.twig
@@ -3,9 +3,10 @@
 <div class="container body">
     <div id="sidebar" class="columns four">
     	<ul class="side-menu">
-    		<li class="selected"><a href="#">All Tasks</a></li>
-    		<li><a href="#">Today's Pipeline</a></li>
     		<li><a href="#">Dashboard</a></li>
+    		<li><a href="#">Today's Pipeline</a></li>
+    		<li><a href="#">Insights</a></li>
+    		<li class="selected"><a href="#">All Tasks</a></li>
     		<li id="show_all_button" style="display:none"><a href="#">&bull;&bull;&bull;</a></li>
     	</ul>
     </div>
@@ -14,11 +15,7 @@
 		<div id="tasks_template">
 			<h2>All Tasks</h2>
 			
-			<ul class="task-list">
-				<li class="task-item">
-					Test
-				</li>
-			</ul>
+			<ul id="task-list" class="task-list"></ul>
 		</div>
 
     </div>
